# libeskel

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  VERSION  aclocal.m4  bootstrap  configure  configure.in
examples/: Makefile.am  Makefile.in  deal1.c  pipeline1.c  pmva.c
libeskel/: Makefile.am  Makefile.in  config-h.in  coollex.c  coollex.h  eskel.c  eskel.h  eskel_extract.c  give.c  give.h  htree.c  htree.h  math.c  math.h  mem.c  mem.h  pepa.c  pepa.h  rmon.c  rmon.h  rtime.c  sched.c  sched.h  state.c  state.h  summ.c  summ.h  tags.h  take.c  take.h
m4/: get_libeskel_version  libeskel_get_version.m4
